fix: better month year alignment in calendar ui

--- a/src/common/scss/shidoka-flatpickr-theme.scss
+++ b/src/common/scss/shidoka-flatpickr-theme.scss
@@ -545,7 +545,7 @@ $calendar-box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.08),
   color: inherit;
   display: inline-block;
   padding: 0;
-  width: 8ch;
+  width: auto;
   text-align: right;
 }
 
@@ -554,7 +554,8 @@ $calendar-box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.08),
 }
 
 .flatpickr-current-month .numInputWrapper {
-  width: 8ch;
+  min-width: 5ch;
+  margin-left: 12px;
   text-align: center;
   display: inline-block;
 }
@@ -576,6 +577,7 @@ $calendar-box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.08),
   height: auto;
   border: none;
   max-width: 5.5ch;
+  margin-right: 4px;
   border-radius: 0;
   vertical-align: initial;
   -webkit-appearance: textfield;
@@ -1116,10 +1118,6 @@ span.flatpickr-weekday {
       .flatpickr-month {
         .flatpickr-current-month {
           padding: 9px 0 0 0;
-
-          .cur-month {
-            margin-left: -0.5ch;
-          }
         }
       }
     }
